# url_predictor

./: .gitignore  Cargo.toml  Package.swift  README.md  cbindgen.toml  cbindgen_no_psl.toml
.github/workflows/: android-build.yml  android-tests.yml  release.yml  release_android.yml  release_apple.yml  release_windows.yml  test.yml  test_apple.yml  test_windows.yml
android/: README.md  RELEASING.md  build.gradle  release_android.sh  settings.gradle  version.properties
android/ddg-url-predictor/: build.gradle
android/ddg-url-predictor/src/main/: AndroidManifest.xml
android/ddg-url-predictor/src/main/java/com/duckduckgo/urlpredictor/: DecisionJson.kt  UrlPredictor.kt
android/ddg-url-predictor/src/test/java/: UrlPredictorTest.kt
apple/: Classifier.swift
apple/Sources/URLPredictor/: Classifier.swift
apple/Sources/URLPredictorTests/: ClassifierTests.swift
data/: suffix_root_allowlist.json  suffix_root_debug.json
scripts/: build_android.sh  build_apple.sh  build_host_for_tests.sh  build_ios.sh  build_macos.sh  build_windows.ps1  build_windows_gitbash.sh  update_psl.sh
src/: generated_suffix_allowlist.rs  lib.rs
tests/: psl_ffi.rs
tools/: generate_suffix_root_allowlist.py
windows/: windows.nuspec
