[package]
name = "url_predictor"
version = "0.3.2"
edition = "2021"

[lib]
# For tests you only need a normal rlib. If you also want the FFI dylib, keep both lines:
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
url = "2"
idna = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
publicsuffix = { version = "2", optional = true }
jni = { version = "0.21", optional = true }   # 👈 NEW
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[dev-dependencies]
# (none needed)

[features]
real-psl = ["publicsuffix"]
jni-host-tests = ["jni"]
